# ferrisvisor

./: .gitignore  Cargo.toml  diesel.toml  roadmap.md
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  supervisord.conf
docker/programs/: crash_15s.py  crash_now.py  exit_2.py  handle_sigterm.py  ignore_signal.py  normal.py  run_1_minute.py
docker/supervisor.d/: host1.ini  host2.ini  host3.ini
migrations/2026-02-01-074331_init/: down.sql  up.sql
migrations/2026-04-19-073630_group-color/: down.sql  up.sql
src/: common.rs  database.rs  handlers.rs  main.rs  models.rs  schema.rs  supervisor.rs  supervisor.rs.bak
src/handlers/: auth.rs  group.rs  host.rs  permission.rs  process.rs  user.rs
src/models/: group.rs  host.rs  mod.rs  permission.rs  process.rs  session.rs  user.rs
web-ui/: .prettierrc  README.md  eslint.config.js  package.json  svelte.config.js  vite.config.ts
web-ui/src/: app.html
web-ui/src/lib/: api.ts  common.ts  constants.ts  cookie.ts  global-state.ts  index.ts  string.ts
web-ui/src/lib/api/: auth.ts  group.ts  host.ts  index.ts  permission.ts  process.ts  user.ts
web-ui/src/lib/components/: AdminListingPage.svelte  CustomIcon.svelte  EntityForm.svelte  EntityList.svelte  Footer.svelte  ProtectedRoute.svelte  SideBar.svelte  TopNavigation.svelte  types.ts
web-ui/src/routes/: +error.svelte  +layout.js  +layout.svelte  +layout.ts  +page.svelte  layout.css
web-ui/src/routes/admin/: +layout.svelte
web-ui/src/routes/admin/groups/: +page.svelte  GroupForm.svelte
web-ui/src/routes/dashboard/: +layout.ts  +page.svelte  ColumnConfigModal.svelte  Filters.svelte  GroupSelector.svelte  HostList.svelte  StatCard.svelte  common.ts
web-ui/src/routes/error/: +page.svelte
web-ui/src/routes/login/: +page.svelte
web-ui/src/routes/logout/: +page.svelte
(+12 files in other folders)
