[package]
name = "ferrisvisor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2"] }
diesel = { version = "2.3.6", features = ["sqlite"] }
futures = "0.3.31"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
