[package]
name = "ferrisvisor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["http2", "macros"] }
diesel = { version = "2.3.6", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
dxr = { version = "0.8.0", features = ["i8", "nil", "derive"] }
dxr_client = { version = "0.8.0", features = ["reqwest"] }
futures = "0.3.31"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
chrono = { version = "0.4.43", features = ["serde"] }
dotenvy = "0.15.7"
diesel-async = { version = "0.7.4", features = ["sqlite", "deadpool", "tokio"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"]}
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
